crates/wac-parser/tests/resolution/fail/redefined-name.wac
type x = u32;
type x = string;